--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     position: sticky; /* Make the side panel sticky */
 }
 
-/* .left-panel {
+.left-panel {
     width: 320px;
     padding: 20px;
 }
@@ -64,7 +64,7 @@ body {
     font-weight: bold;
     margin-top: 10px;
     display: block;
-} */
+}
 
 
 
@@ -76,7 +76,7 @@ body {
 
 }
 
-h1 {
+/* h1 {
     text-align: center;
     margin-bottom: 30px;
     font-family: 'Helvetica Neue', Arial, sans-serif;
@@ -197,35 +197,20 @@ h1 {
     background-color: #45a049;
 }
 
-/* .container {
-    position: relative; /* Add relative positioning to container 
-} */
-
-.side-panel {
-    position: fixed; /* Make the side panel fixed */
-    top: 0;
-    right: 0;
-    width: 200px; /* Adjust the width as needed */
-    height: 100%; /* Make the side panel cover the entire height */
-    background-color: #f2f2f2;
-    padding: 20px;
-    box-sizing: border-box;
-}
-
 .tag-container {
     text-align: left;
     margin-top: 10px;
 }
 
 .tag {
-    display: block; /* Display tags as block elements */
+    display: block;
     margin-bottom: 10px;
     padding: 5px 10px;
     background-color: #f2f2f2;
     color: #888;
     cursor: pointer;
-    height: 100%; /* Set a fixed height for the tags column */
-    overflow-y: auto; /* Enable vertical scrolling */
+    height: 100%;
+    overflow-y: auto;
 }
 
 .tag:hover,
@@ -238,14 +223,12 @@ h1 {
     text-align: center;
     margin: 30px;
     color: #888;
-    /* background-color: #333333;
-    color: white; */
 }
 
 .heart {
     color: red;
 }
-
+ */
 
 /* ----------------- Right ------------------ */
 
@@ -259,6 +242,14 @@ h1 {
     background-color: #f2f2f2;
     padding: 20px;
     box-sizing: border-box;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 200px;
+    height: 100%;
+    background-color: #f2f2f2;
+    padding: 20px;
+    box-sizing: border-box
 }
 
 
