--- a/style.css
+++ b/style.css
@@ -32,12 +32,16 @@ body {
 }
 
 .logo img {
-    width: 200%;
-    height: 50%;
+    width: 100%;
+    height: 10%;
 }
 
 .social-media {
-    margin-top: 30px;
+    margin-top: 10px;
+    text-align: center;
+    border: 1px solid #ccc;
+    padding: 10px;
+    background-color: #f2f2f2;
 }
 
 .social-media a {
