--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@
     .center {
         width: 65%;
         background-color: #fff;
-        margin-left: 240px;
+        margin-left: 15%;
     }
 
     h1 {
