--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@
     .center {
         width: 65%;
         background-color: #fff;
-        margin-left: 15%;
+        margin-left: 17%;
     }
 
     h1 {
@@ -295,31 +295,66 @@
 
     /* -------------- Media Queries ------------------ */
 
-    /* ----------------- Tablets --------------------- */
-    @media (max-width: 768px) {
-        .container {
-            padding: 10px;
-        }
-        
-        .book {
-            width: 45%;
-            height: auto;
-        }
+/* ----------------- Tablets --------------------- */
+@media (max-width: 1024px) {
+    .container {
+        flex-direction: column;
     }
 
-    /* -------------- Mobile Phones ------------------ */
-    @media (max-width: 480px) {
-        .container {
-            padding: 5px;
-        }
-        
-        .book {
-            width: 90%;
-            height: auto;
-        }
-        
-        .search-input {
-            width: 100%;
-            max-width: 300px;
-        }
+    .left {
+        width: 100%;
+        position: static;
     }
+
+    .center {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .right {
+        width: 100%;
+        position: static;
+    }
+
+    .search-container,
+    .pagination,
+    .tag-container {
+        text-align: center;
+    }
+
+    .search-input {
+        margin-bottom: 10px;
+    }
+}
+
+/* ----------------- Mobile Devices ----------------- */
+@media (max-width: 600px) {
+    h1 {
+        font-size: 36px;
+    }
+
+    .book {
+        width: 100%;
+        height: auto;
+    }
+
+    .search-input {
+        max-width: 100%;
+    }
+
+    .left-panel,
+    .right-panel {
+        position: static;
+        padding: 0;
+    }
+
+    .tag-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .tag {
+        margin: 5px;
+    }
+}
